switched to jquery and Ajax, plus EJS partials

--- a/views/connect-local.ejs
+++ b/views/connect-local.ejs
@@ -40,8 +40,10 @@
         <p>A demo by <a href="http://scotch.io">Scotch</a>.</p>
         <p>Visit the <a href="http://scotch.io/tutorials/javascript/easy-node-authentication-setup-and-local">tutorial</a>.</p>
     </div>
-
+    
 </div>
 </div>
+<!-- insert a script partial -->
+<%- include scripts.ejs %>
 </body>
 </html>
