moved css paths into EJS partial

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -2,13 +2,7 @@
 <html>
 <head>
     <title>Profile</title>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-    <style>
-        body  { padding-top:80px; word-wrap:break-word; }
-        td, th{padding-right: 2em;}
-        tbody tr:nth-child(odd){background-color: #ccc;}
-    </style>
+    <%- include styles.ejs %>
 </head>
 <body>
 <div class="container">
