--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -39,6 +39,9 @@
                     </form>
 
                     <hr>
+                <% function getCoinPrice(coin, currency){
+                        return 1000;
+                    }    %>
                  <% if (user.coins) { %>
                  <h3>Coins You Have</h3>
                  <table>
@@ -56,7 +59,7 @@
                           <tr>
                             <td class='abrv'><%= coin %></td>
                             <td class='qty'><%= user.coins[coin] %></td>
-                            <td class='price'>TBA</td>
+                            <td class='price'><%= getCoinPrice(coin, 'USD') %></td>
                             <td class='total'>TBA</td>
                           </tr>
                           <% } %>
