--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,7 @@
 /*style.css*/
 body  { padding-top:80px; word-wrap:break-word; }
-td, th{padding-right: 2em;}
+td, th{padding-right: 2em; font-size: 2em;}
 tbody tr:nth-child(odd){background-color: #ccc;}
+a.btn[href="/login"],
+button[type="submit"]{width:80%; height: 200px;}
+a.refresh{font-size: 5em;}
