--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -43,20 +43,34 @@
                  <% if (user.coins) { %>
                  <h3>Coins You Have</h3>
 
+                 <% if (user.cur) { 
+                    const curs = ['usd', 'eur', 'cny'];
+                    let cur;
+                 %>
+   
                  <form id="chooseCurrency">
                     <div class="form-group">
-                        <label>Choose Currency</label>
-                        <select class="cur form-control"  name="cur" required>
-                          <option value="usd" <% if (user.cur === 'usd') { %> selected <%}%>   >USD</option>
-                          <option value="eur" <% if (user.cur === 'eur') { %> selected <%}%>   >EUR</option>
-                          <option value="cny" <% if (user.cur === 'cny') { %> selected <%}%>   >CNY</option>
+                        <label>Show Prices In</label>
+                        <select class="cur form-control yourCurrencyIs"  name="cur" required>
+                         <%
+                            for (var i = 0; i < curs.length; i++){
+                            cur = curs[i];
+                         %>
+                            <option 
+                                value="<%= cur %>" 
+                                <% if (cur === user.cur) { %> selected <%}%>   
+                                >
+                                <%= cur %> 
+                            </option>         
+
+                        <% } %>
                         </select>
 
                     </div>
 
 
                     <h1>Your currency is <span class="yourCurrencyIs"><%= user.cur %><span></h1>
-
+                <% } %>
 
                     <button type="submit" class="btn btn-warning btn-lg">Change Currency</button>
                 </form>
