setting qty from table

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -75,37 +75,29 @@
                     <button type="submit" class="btn btn-warning btn-lg">Change Currency</button>
                 </form>
 
-                 <table class = "prices">
-                     <thead>
-                        <tr>
-                            <th>Coin</th>
-                            <th>Qty</th>
-                            <th><span class="yourCurrencyIs"><%= user.cur %><span> Price</th>
-                            <th>Total</th>
-                        </tr>
-                     </thead>
-                     <tbody class='coinsYouHave'> 
-                        <!-- <% Object.keys(user.coins.toObject()).forEach(function(coin){ %>
-                            <% if (Object.prototype.hasOwnProperty.call(user.coins, coin)) {%>
-                          <tr class=<%= coin %>>
-                            <td class='abrv'><%= coin %></td>
-                            <td class='qty'><%= user.coins[coin] %></td>
-                            <td class='cur'><%= user.cur %> price placeholder</td>
-                            <td class='total'>TBA</td>
-                          </tr>
-                          <% } %>
-                        <% }); %> -->
-                       
-                    </tbody>
-                    <tfoot>
-                        <tr>
-                            <td></td>
-                            <td></td>
-                            <td>Grand Total:</td>
-                            <td class="grandTotal"></td>
-                        </tr>
-                    </tfoot>
-                </table>
+                <form id="tableForm">
+                     <table class = "prices">
+                         <thead>
+                            <tr>
+                                <th>Coin</th>
+                                <th>Qty</th>
+                                <th><span class="yourCurrencyIs"><%= user.cur %><span> Price</th>
+                                <th>Total</th>
+                            </tr>
+                         </thead>
+                         <tbody class='coinsYouHave'> 
+                            <!-- to be replaced by public/client.js -->                       
+                        </tbody>
+                        <tfoot>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td>Grand Total:</td>
+                                <td class="grandTotal"></td>
+                            </tr>
+                        </tfoot>
+                    </table>
+                </form>
                 <% } else { %>
                     <p>no user.coins</p>
                 <% } %>
