--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,16 +8,15 @@
 <div class="container">
 
     <div class="jumbotron text-center">
-        <h1><span class="fa fa-lock"></span> Node Authentication</h1>
+        <h1>Bitcoin and Altcoin Portfolio Calculator</h1>
+        <p><img src="samplePortfolio.gif" alt="Sample Portfolio Screenshot" /></p>
+        <h2>Now with database to remember your info between logins</h2>
 
         <p>Login or Register with:</p>
 
         <a href="/login" class="btn btn-default"><span class="fa fa-user"></span> Local Login</a>
         <a href="/signup" class="btn btn-default"><span class="fa fa-user"></span> Local Signup</a>
-    </div>
 
-    <div class="text-center">
-        <p>Visit the <a href="http://scotch.io/tutorials/javascript/easy-node-authentication-setup-and-local">tutorial</a>.</p>
     </div>
 
 </div>
