--- a/public/style.css
+++ b/public/style.css
@@ -2,10 +2,10 @@
 body  { padding-top:80px; word-wrap:break-word; }
 td, th{padding-right: 2em; font-size: 2em;}
 tbody tr:nth-child(odd){background-color: #ccc;}
-/*
+/**/
 a.btn[href="/login"],
 button[type="submit"]{width:80%; height: 200px;}
-*/
+
 a.refresh{font-size: 1em; display: block; text-align: center;}
 
 select.yourCurrencyIs,
