fixed missing </span> and started mobile CSS

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -30,7 +30,7 @@
                             <tr>
                                 <th>Coin</th>
                                 <th>Qty</th>
-                                <th><span class="yourCurrencyIs"><%= user.cur %><span> Price</th>
+                                <th><span class="yourCurrencyIs"><%= user.cur %></span> <span class="wide">Unit Price</span></th>
                                 <th>Total</th>
                             </tr>
                          </thead>
