--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,5 @@
 /*style.css*/
+* {box-sizing: border-box;}
 body  { padding-top:80px; word-wrap:break-word; }
 td, th{padding-right: 2em; font-size: 2em;}
 tbody tr:nth-child(odd){background-color: #ccc;}
@@ -19,3 +20,47 @@ span.yourCurrencyIs{
 
 td a.delete{float:right; display: block; color: #f00; font-weight: bold;
     text-decoration: none;}
+
+@media only screen and (max-width: 640px) { 
+
+	th span.wide{display: none;}
+
+	    table, thead, tbody, tfoot, th, td, tr { 
+      display: block; 
+    }
+    
+    thead th.qty,
+    thead th.total { 
+      position: absolute;
+      top: -9999px;
+      left: -9999px;
+    }
+
+    tr { border: 1px solid #333; }
+    
+    tbody td { 
+      border: none;
+      border-bottom: 1px dotted #666; 
+      position: relative;
+      padding-left: 35%; 
+    }
+    
+    tbody td:before { 
+      position: absolute;
+      top: 6px;
+      left: 6px;
+      width: 30%; 
+      padding-right: 10px; 
+      white-space: nowrap;
+    }
+    
+    tbody td:nth-of-type(1):before { content: "Coin:"; }
+    tbody td:nth-of-type(2):before { content: "Qty:"; }
+    tbody td:nth-of-type(3):before { content: "Price:"; }
+    tbody td:nth-of-type(4):before { content: "Total:"; }
+
+
+    tfoot td[colspan="2"],
+    tfoot td{text-align: center;}
+
+} /* end media query */
